modules/tests/_kubernetes-policy/fixtures/workloads/jellyfin-storage-pvc-wrong-binding/resources.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
  name: jellyfin-config
  namespace: jellyfin
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 20Gi
  storageClassName: ''
  volumeName: other
